# preservationeval

./: .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  TODO.md  WARP.md  const.py  hatch_build.py  package.json  preservationeval.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tables.py  test.py  valdiate.py  validate.py
.devcontainer/: devcontainer.json  devcontainer.jsonc
.github/: renovate.json
.github/workflows/: auto-approve.yml  auto-pr.yml  ci.yml  claude-bot-reviewer.yml  claude-code-review.yml  claude-renovate-reviewer.yml  claude.yml  codeql.yml  dpjs-monitor.yml  pre-commit.yml  publish.yml  python-cicd.yml  tests.yml
.github/workflows /: codeql.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: TODO.md  releasing.md
docs/plans/: 2026-02-23-simplify-install-pipeline-design.md  2026-02-23-simplify-install-pipeline-plan.md  2026-02-23-uv-migration-design.md  2026-02-23-uv-migration-plan.md  2026-02-24-todo-grooming-design.md  2026-02-25-readme-accuracy-design.md  2026-02-25-readme-accuracy-plan.md
examples/: tables_example.py
install/: __init__.py  export.py  generate_tables.py  parse.py  patterns.py
misc/: np-example.py
preservationeval/: __init__.py  const.py  np_array.py  shifted_array.py  tables.py  tables_example.py
scripts/: compare_tables.py  generate_tables.py  install.py  make_test_data.py  prep-release.sh  tables_example.py  update_test_data.py
src/preservationeval/: __init__.py  _version.py  const.py  core.py  core_functions.py  eval.py  eval_functions.py  logging.py  lookup.py  shifted_array.py  types.py  util_functions.py  utils.py
src/preservationeval/install/: __init__.py  const.py  export.py  extract.py  generate_tables.py  generate_tables_new.py  installer.py  parse.py  path.py  paths.py  patterns.py
src/preservationeval/install/validate/: config.py  validate_core.py
src/preservationeval/main/: __init__.py  _tables.py  config.py  core.py  eval.py  tables.py  utils.py
src/preservationeval/pyutils/: __init__.py
src/preservationeval/pyutils/logging/: config.py
src/preservationeval/table_types/: __init__.py
src/preservationeval/tables/: __init__.py  parse.py
src/preservationeval/tables/validate/: __init__.py  config.py  core.py  templates.py
src/preservationeval/types/: __init__.py  lookuptable.py
src/preservationeval/utils/: __init__.py
src/preservationeval/utils/logging/: config.py
src/wip/: download.py  generate_tables_old.py  installer_obsolete.py  paths.py
test/: config.py  templates.py  validate.py
tests/: __init__.py  config.py  conftest.py  templates.py  test_core.py  test_eval.py  test_lookup.py  test_return_types.py  test_tables.py  test_util_functions.py  test_utils.py  test_validate.py  test_validation.py  test_validation_old.py  validate_core.py
tests/install/: test_build_hook.py  test_export.py  test_extract.py  test_parse.py
tests/main/: test_eval.py  test_utils.py
tests/types/: test_lookuptable.py
tests/utils/: test_importerror.py  test_logging.py  test_safepath.py
tests/wip/: __init__.py  test_core.py  test_tables.py
wip/: MANIFEST.in  build.py  setup (w version generation).py  setup copy.py  setup.BAK.py  setup.py  setup.py.BAK  setup_command.py  setup_old.py  setup_working_before_install_refactoring.py
