[metadata]
name = preservationeval
version = 0.1.0
author = Petter Blomberg
author_email = petter.blomberg@gmail.com
description = A Python module to mimic the calculations done by the Dew Point Calculator from Image Permanence Institute (IPI).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petter-b/preservationeval
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    numpy
    pytest
python_requires = >=3.6

[options.entry_points]
console_scripts =
    preservationeval = preservationeval.__main__:main

[mypy]
ignore_missing_imports = True

[tool:pytest]
pythonpath = .:tests